Fix css on mobile

--- a/client/src/home/middle/middle-container.scss
+++ b/client/src/home/middle/middle-container.scss
@@ -1,7 +1,6 @@
 #middle-container {
     position: relative;
     width: 40%;
-    min-width: 475px;
     padding: 20px;
     border-right: solid gray 1px;
     border-left: solid gray 1px;
